--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -52,8 +52,12 @@ jobs:
         uses: jlumbroso/free-disk-space@main
         with:
           android: true
-          dotnet: true
-          haskell: true
+          tool-cache: false
+          dotnet: false
+          haskell: false
+          large-packages: false
+          docker-images: false
+          swap-storage: false
       - name: Set up JDK 21
         uses: actions/setup-java@v5
         with:
@@ -320,8 +324,12 @@ jobs:
         uses: jlumbroso/free-disk-space@main
         with:
           android: true
-          dotnet: true
-          haskell: true
+          tool-cache: false
+          dotnet: false
+          haskell: false
+          large-packages: false
+          docker-images: false
+          swap-storage: false
       - name: Set up JDK 21
         uses: actions/setup-java@v5
         with:
@@ -362,8 +370,12 @@ jobs:
         uses: jlumbroso/free-disk-space@main
         with:
           android: true
-          dotnet: true
-          haskell: true
+          tool-cache: false
+          dotnet: false
+          haskell: false
+          large-packages: false
+          docker-images: false
+          swap-storage: false
       - name: Run Central Server system tests
         working-directory: ./src
         run: ./gradlew -Dorg.gradle.jvmargs=-Xmx1g :central-server:admin-service:ui-system-test:systemTest -PsystemTestCsImageName=localhost:5555/xrd-centralserver:${{ github.sha }}
@@ -426,8 +438,12 @@ jobs:
         uses: jlumbroso/free-disk-space@main
         with:
           android: true
-          dotnet: true
-          haskell: true
+          tool-cache: false
+          dotnet: false
+          haskell: false
+          large-packages: false
+          docker-images: false
+          swap-storage: false
       - name: Set up JDK 21
         uses: actions/setup-java@v5
         with:
@@ -508,6 +524,16 @@ jobs:
           task: start-measurement
           label: 'E2E tests'
       # Setup
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@main
+        with:
+          android: true
+          tool-cache: false
+          dotnet: false
+          haskell: false
+          large-packages: false
+          docker-images: false
+          swap-storage: false
       - uses: actions/checkout@v5
       - name: Set up JDK 21
         uses: actions/setup-java@v5
