chore: reworking CI..
Refs: XRDDEV-3003

--- a/.github/workflows/build-base-images.yaml
+++ b/.github/workflows/build-base-images.yaml
@@ -5,6 +5,7 @@ on:
   push:
     branches:
       - develop-8.x
+      - XRDDEV-3003
     paths:
       - 'deployment/security-server/base-images/**'
       - 'src/libs/pkcs11wrapper/**'
