chore: reworking CI..
Refs: XRDDEV-3003

--- a/deployment/security-server/base-images/Dockerfile-backup-manager-baseline
+++ b/deployment/security-server/base-images/Dockerfile-backup-manager-baseline
@@ -1,6 +1,7 @@
 ARG REGISTRY_URL=localhost:5555
+ARG BASE_IMAGE_TAG=latest
 
-FROM ${REGISTRY_URL}/ss-baseline-runtime:latest
+FROM ${REGISTRY_URL}/ss-baseline-runtime:${BASE_IMAGE_TAG}
 
 ENV DEBIAN_FRONTEND=noninteractive
 
