--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,7 +21,7 @@ permissions:
   pull-requests: write # https://github.com/gradle/actions/tree/main/setup-gradle#adding-job-summary-as-a-pull-request-comment
   actions: read # Required for https://github.com/dorny/test-reporter
   checks: write # Required for https://github.com/dorny/test-reporter
-  packages: read # Required to pull base images from GHCR
+  packages: write # Required to pull base images from GHCR and push application images
 
 # Cancels previous workflow run on PR if a new one is started (does not affect push to develop).
 # This is because github.head_ref is empty on push events so defaults to the unique github.run_id.
