--- a/src/gradle.properties
+++ b/src/gradle.properties
@@ -16,3 +16,5 @@ frontendNodeVersion=22.17.1
 
 #Image creation defaults
 xroadImageRegistry=localhost:5555
+xroadBaseImageTag=7.8.0-SNAPSHOT
+xroadServiceImageTag=7.8.0-SNAPSHOT
