chore: Added script for migrating TLS keys & certificates from filesystem to secret store (#2986)
* chore: Authentication provider conf properties refactor + minor management serviices' changes

* chore: Added script for migrating TLS keys & certificates from filesystem to secret store

--- a/src/central-server/registration-service/src/main/resources/application.yml
+++ b/src/central-server/registration-service/src/main/resources/application.yml
@@ -3,7 +3,8 @@ spring:
     import:
       - classpath:/xroad-common.yaml
   servlet:
-    multipart.enabled: false
+    multipart:
+      enabled: false
 server:
   error:
     whitelabel:
