--- a/src/central-server/management-service/application/src/main/resources/application.yml
+++ b/src/central-server/management-service/application/src/main/resources/application.yml
@@ -5,7 +5,8 @@ spring:
     import:
       - classpath:/xroad-common.yaml
   servlet:
-    multipart.enabled: false
+    multipart:
+      enabled: false
   jackson:
     default-property-inclusion: NON_NULL
 
